--- a/po/no.po
+++ b/po/no.po
@@ -8,6 +8,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2005-07-28 00:40+0200\n"
+"PO-Revision-Date: 2005-07-28 00:42+0200\n"
+"Last-Translator: Terance Edward Sola <terance@lyse.net>\n"
+"Language-Team: Norwegian Bokmal <i18n-nb@lister.ping.uio.no>\n"
 "POT-Creation-Date: 2005-08-03 10:29+0200\n"
 "PO-Revision-Date: 2005-08-03 10:31+0200\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
@@ -553,8 +557,7 @@ msgstr ""
 "«true». Ellers vises både kataloger og filer."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:35
-msgid ""
-"If set to true, newly opened windows will have the location bar visible."
+msgid "If set to true, newly opened windows will have the location bar visible."
 msgstr "Nye vinduer har adressefeltet synlig hvis satt til «true»."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:36
@@ -711,10 +714,8 @@ msgstr ""
 "til «true»."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:56
-msgid ""
-"If true, labels will be placed beside icons rather than underneath them."
-msgstr ""
-"Hvis sann vil etiketter plaseres ved siden av ikoner i stedet for under dem."
+msgid "If true, labels will be placed beside icons rather than underneath them."
+msgstr "Hvis sann vil etiketter plaseres ved siden av ikoner i stedet for under dem."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:57
 msgid "If true, new windows will use manual layout by default."
@@ -983,8 +984,7 @@ msgstr "Om en tilpasset forvalgt bakgrunn er satt for sidepanelet."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:105
 msgid "Whether to ask for confirmation when moving files to trash"
-msgstr ""
-"Om det skal spørres om bekreftelse ved flytting av filer til papirkurven"
+msgstr "Om det skal spørres om bekreftelse ved flytting av filer til papirkurven"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:106
 msgid "Whether to enable immediate deletion"
@@ -1215,10 +1215,8 @@ msgid "Couldn't Install Emblem"
 msgstr "Kunne ikke installere emblem"
 
 #: ../libnautilus-private/nautilus-emblem-utils.c:203
-msgid ""
-"Sorry, but emblem keywords can only contain letters, spaces and numbers."
-msgstr ""
-"Beklager, men nøkkelord for emblemer kan kun inneholde bokstaver og tall."
+msgid "Sorry, but emblem keywords can only contain letters, spaces and numbers."
+msgstr "Beklager, men nøkkelord for emblemer kan kun inneholde bokstaver og tall."
 
 #. this really should never happen, as a user has no idea
 #. * what a keyword is, and people should be passing a unique
@@ -1323,8 +1321,7 @@ msgstr ""
 msgid ""
 "Cannot move \"%s\" because it or its parent folder are contained in the "
 "destination."
-msgstr ""
-"«%s» kan ikke flyttes fordi den eller opphavsmappen er i målmappens sti."
+msgstr "«%s» kan ikke flyttes fordi den eller opphavsmappen er i målmappens sti."
 
 #: ../libnautilus-private/nautilus-file-operations.c:643
 #, c-format
@@ -1521,8 +1518,7 @@ msgstr ""
 
 #: ../libnautilus-private/nautilus-file-operations.c:1113
 msgid "If you replace an existing file, its contents will be overwritten."
-msgstr ""
-"Hvis du erstatter en eksisterende fil vil innholdet i denne overskrives."
+msgstr "Hvis du erstatter en eksisterende fil vil innholdet i denne overskrives."
 
 #: ../libnautilus-private/nautilus-file-operations.c:1126
 #: ../libnautilus-private/nautilus-file-operations.c:1145
@@ -1785,8 +1781,7 @@ msgstr "Du kan ikke kopiere søppelkurven."
 
 #: ../libnautilus-private/nautilus-file-operations.c:2029
 msgid "A trash folder is used for storing items moved to the trash."
-msgstr ""
-"En papirkurv brukes for å lagre oppføringer som er flyttet til papirkurven."
+msgstr "En papirkurv brukes for å lagre oppføringer som er flyttet til papirkurven."
 
 #: ../libnautilus-private/nautilus-file-operations.c:2031
 msgid "Can't Change Trash Location"
@@ -2513,8 +2508,7 @@ msgstr "Kunne ikke vise «%s», fordi verten «%s» ikke ble funnet."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:614
 #: ../src/nautilus-window-manage-views.c:1422
-msgid ""
-"Check that the spelling is correct and that your proxy settings are correct."
+msgid "Check that the spelling is correct and that your proxy settings are correct."
 msgstr "Sjekk at stavingen er korrekt og at proxy-innstillingene er korrekte."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:619
@@ -2573,8 +2567,7 @@ msgid "This drop target only supports local files."
 msgstr "Mål for slipp støtter kun lokale filer."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:921
-msgid ""
-"To open non-local files copy them to a local folder and then drop them again."
+msgid "To open non-local files copy them to a local folder and then drop them again."
 msgstr ""
 "For å åpne eksterne filer må du kopiere dem til en lokal mappe og slippe dem "
 "igjen."
@@ -2626,11 +2619,11 @@ msgstr "Filhåndtering"
 
 #: ../nautilus-home.desktop.in.h:1 ../src/file-manager/fm-tree-view.c:1243
 msgid "Home Folder"
-msgstr "Hjemmekatalog"
+msgstr "Hjemmemappe"
 
 #: ../nautilus-home.desktop.in.h:2
 msgid "View your home folder in the Nautilus file manager"
-msgstr "Vis din hjemmekatalog i Nautilus filhåndtereren"
+msgstr "Vis din hjemmemappe i Nautilus filhåndtereren"
 
 #: ../nautilus.desktop.in.h:1
 msgid "Browse the file system with the file manager"
@@ -2700,10 +2693,8 @@ msgstr "Endre skrivebords_bakgrunn"
 
 #. tooltip
 #: ../src/file-manager/fm-desktop-icon-view.c:701
-msgid ""
-"Show a window that lets you set your desktop background's pattern or color"
-msgstr ""
-"Vis et vindu som lar deg velge mønster eller farge for skrivebordsbakgrunnen"
+msgid "Show a window that lets you set your desktop background's pattern or color"
+msgstr "Vis et vindu som lar deg velge mønster eller farge for skrivebordsbakgrunnen"
 
 #. label, accelerator
 #: ../src/file-manager/fm-desktop-icon-view.c:706
@@ -2770,8 +2761,7 @@ msgstr "Er du sikker på at du vil slette «%s» permanent?"
 #: ../src/file-manager/fm-directory-view.c:861
 #, c-format
 msgid "Are you sure you want to permanently delete the %d selected item?"
-msgid_plural ""
-"Are you sure you want to permanently delete the %d selected items?"
+msgid_plural "Are you sure you want to permanently delete the %d selected items?"
 msgstr[0] "Er du sikker på at du vil slette %d valgt oppføring permanent?"
 msgstr[1] "Er du sikker på at du vil slette %d valgte oppføringer permanent?"
 
@@ -2874,8 +2864,7 @@ msgstr "For mange filer"
 
 #: ../src/file-manager/fm-directory-view.c:3318
 msgid "Cannot move file to trash, do you want to delete immediately?"
-msgstr ""
-"Kan ikke flytte filen til papirkurven. Ønsker du å slette den med én gang?"
+msgstr "Kan ikke flytte filen til papirkurven. Ønsker du å slette den med én gang?"
 
 #: ../src/file-manager/fm-directory-view.c:3319
 #, c-format
@@ -2894,8 +2883,7 @@ msgid "None of the %d selected items can be moved to the Trash"
 msgstr "Ingen av de %d valgte oppføringene kan flyttes til papirkurven"
 
 #: ../src/file-manager/fm-directory-view.c:3326
-msgid ""
-"Cannot move some items to trash, do you want to delete these immediately?"
+msgid "Cannot move some items to trash, do you want to delete these immediately?"
 msgstr ""
 "Kan ikke flytte noen oppføringer til papirkurven. Ønsker du å slette disse "
 "med én gang?"
@@ -2922,8 +2910,7 @@ msgid ""
 msgid_plural ""
 "Are you sure you want to permanently delete the %d selected items from the "
 "trash?"
-msgstr[0] ""
-"Er du sikker på at du vil slette %d valgt oppføring i papirkurven permanent?"
+msgstr[0] "Er du sikker på at du vil slette %d valgt oppføring i papirkurven permanent?"
 msgstr[1] ""
 "Er du sikker på at du vil slette %d valgte oppføringer i papirkurven "
 "permanent?"
@@ -3080,10 +3067,8 @@ msgstr "«%s» vil bli kopiert hvis du velger kommandoen «Lim inn filer»"
 #: ../src/file-manager/fm-directory-view.c:5454
 #, c-format
 msgid "The %d selected item will be moved if you select the Paste command"
-msgid_plural ""
-"The %d selected items will be moved if you select the Paste command"
-msgstr[0] ""
-"%d valgt oppføring vil bli flyttet hvis du velger kommandoen «Lim inn filer»"
+msgid_plural "The %d selected items will be moved if you select the Paste command"
+msgstr[0] "%d valgt oppføring vil bli flyttet hvis du velger kommandoen «Lim inn filer»"
 msgstr[1] ""
 "De %d valgte oppføringene vil bli flyttet hvis du velger kommandoen «Lim inn "
 "filer»"
@@ -3091,10 +3076,8 @@ msgstr[1] ""
 #: ../src/file-manager/fm-directory-view.c:5461
 #, c-format
 msgid "The %d selected item will be copied if you select the Paste command"
-msgid_plural ""
-"The %d selected items will be copied if you select the Paste command"
-msgstr[0] ""
-"%d valgt oppføring vil bli kopiert hvis du velger kommandoen «Lim inn filer»"
+msgid_plural "The %d selected items will be copied if you select the Paste command"
+msgstr[0] "%d valgt oppføring vil bli kopiert hvis du velger kommandoen «Lim inn filer»"
 msgstr[1] ""
 "De %d valgte oppføringene vil bli kopiert hvis du velger kommandoen «Lim inn "
 "filer»"
@@ -3587,8 +3570,7 @@ msgstr "Oppstarter"
 
 #: ../src/file-manager/fm-error-reporting.c:57
 #, c-format
-msgid ""
-"You do not have the permissions necessary to view the contents of \"%s\"."
+msgid "You do not have the permissions necessary to view the contents of \"%s\"."
 msgstr "Du har ikke nødvendige rettigheter til å vise innholdet av «%s»."
 
 #: ../src/file-manager/fm-error-reporting.c:61
@@ -3611,17 +3593,13 @@ msgstr "Feil under visning av mappe"
 
 #: ../src/file-manager/fm-error-reporting.c:103
 #, c-format
-msgid ""
-"The name \"%s\" is already used in this folder. Please use a different name."
-msgstr ""
-"Navnet «%s» er allerede i bruk i denne mappen. Vennligst bruk et annet navn."
+msgid "The name \"%s\" is already used in this folder. Please use a different name."
+msgstr "Navnet «%s» er allerede i bruk i denne mappen. Vennligst bruk et annet navn."
 
 #: ../src/file-manager/fm-error-reporting.c:108
 #, c-format
-msgid ""
-"There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
-msgstr ""
-"«%s» finnes ikke i denne mappen. Kanskje den er flyttet eller slettet nylig?"
+msgid "There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
+msgstr "«%s» finnes ikke i denne mappen. Kanskje den er flyttet eller slettet nylig?"
 
 #: ../src/file-manager/fm-error-reporting.c:113
 #, c-format
@@ -3662,15 +3640,13 @@ msgstr "Feil under endring av navn"
 
 #: ../src/file-manager/fm-error-reporting.c:165
 #, c-format
-msgid ""
-"You do not have the permissions necessary to change the group of \"%s\"."
+msgid "You do not have the permissions necessary to change the group of \"%s\"."
 msgstr "Du har ikke nødvendige rettigheter til å endre gruppen for «%s»."
 
 #: ../src/file-manager/fm-error-reporting.c:169
 #, c-format
 msgid "Couldn't change the group of \"%s\" because it is on a read-only disk"
-msgstr ""
-"Kunne ikke endre gruppe for «%s» fordi den er på en skrivebeskyttet disk"
+msgstr "Kunne ikke endre gruppe for «%s» fordi den er på en skrivebeskyttet disk"
 
 #: ../src/file-manager/fm-error-reporting.c:177
 #, c-format
@@ -3705,10 +3681,8 @@ msgstr "Feil under endring av eier"
 
 #: ../src/file-manager/fm-error-reporting.c:235
 #, c-format
-msgid ""
-"Couldn't change the permissions of \"%s\" because it is on a read-only disk"
-msgstr ""
-"Kunne ikke endre rettigheter for «%s» fordi den er på en skrivebeskyttet disk"
+msgid "Couldn't change the permissions of \"%s\" because it is on a read-only disk"
+msgstr "Kunne ikke endre rettigheter for «%s» fordi den er på en skrivebeskyttet disk"
 
 #: ../src/file-manager/fm-error-reporting.c:242
 #, c-format
@@ -5104,8 +5078,7 @@ msgstr "Kun opprett Nautilus-vinduer for eksplisitt spesifiserte URIer."
 msgid ""
 "Do not manage the desktop (ignore the preference set in the preferences "
 "dialog)."
-msgstr ""
-"Ikke tegn opp skrivebordet (ignorer brukervalg satt i brukervalg-dialogen)."
+msgstr "Ikke tegn opp skrivebordet (ignorer brukervalg satt i brukervalg-dialogen)."
 
 #: ../src/nautilus-main.c:277
 msgid "open a browser window."
@@ -5159,8 +5132,7 @@ msgstr "Hvis det er tilfelle, vil du være dømt til å gjenta den."
 
 #: ../src/nautilus-navigation-window-menus.c:118
 msgid "Are you sure you want to clear the list of locations you have visited?"
-msgstr ""
-"Er du sikker på at du ønsker å tømme listen over stedene du har besøkt?"
+msgstr "Er du sikker på at du ønsker å tømme listen over stedene du har besøkt?"
 
 #: ../src/nautilus-navigation-window-menus.c:120
 msgid "If you clear the list of locations, they will be permanently deleted."
@@ -5638,8 +5610,7 @@ msgstr "Sjekk at proxy-innstillingene er korrekte."
 msgid ""
 "Couldn't display \"%s\", because Nautilus cannot contact the SMB master "
 "browser."
-msgstr ""
-"Kunne ikke vise «%s», fordi Nautilus ikke kan kontakte SMB master browser."
+msgstr "Kunne ikke vise «%s», fordi Nautilus ikke kan kontakte SMB master browser."
 
 #: ../src/nautilus-window-manage-views.c:1437
 msgid "Check that an SMB server is running in the local network."
@@ -5932,3 +5903,4 @@ msgstr "Nettverkstjenere"
 #: ../src/network-scheme.desktop.in.h:2
 msgid "View your network servers in the Nautilus file manager"
 msgstr "Vis dine nettverkstjenere i filhåndtereren Nautilus"
+
