--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-15  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 2005-08-14  Terance Sola  <terance@lyse.net>
 
 	* nb.po: Updated Norwegian bokmål translation.
