Hungarian translation updated.
2005-08-16  Gabor Kelemen  <kelemeng@gnome.hu>

	* hu.po: Hungarian translation updated.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-16  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Hungarian translation updated.
+
 2005-08-06  Pawan Chitrakar  <pawan@nplinux.org>
 
 	* ne.po: Updated Nepali Translation
