--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-08-17  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/nautilus-main.c: (main):
+	Revert the GDK threading patch as it causes major
+	freezage. Fixes #313588.
+
 2005-08-12  Christian Neumair  <chris@gnome-de.org>
 
 	* src/file-manager/fm-properties-window.c: (create_image_widget),
