Updated Romanian translation
2005-08-17  Mugurel Tudor  <mugurelu@gnome.ro>

        * ro.po: Updated Romanian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-17  Mugurel Tudor  <mugurelu@gnome.ro>
+
+	* ro.po: Updated Romanian translation
+
 2005-08-17  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Updated Albanian translation.
