--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-19  Jens Seidel  <jseidel@cvs.gnome.org>
+
+	* de.po: Various typo fixes.
+
 2005-08-19  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Reinout van Schouwen.
