--- a/po/de.po
+++ b/po/de.po
@@ -5,9 +5,7 @@
 # Christian Meyer <chrisime@gnome.org>, 2000-2002.
 # Christian Neumair <chris@gnome-de.org>, 2002-2004.
 # Hendrik Richter <hendi@gnome-de.org>, 2004, 2005.
-#
-# Last Updated:
-# 2003-06-11  Christian Neumair
+# Jens Seidel <jseidel@cvs.gnome.org>, 2005.
 #
 # item		= Objekt
 # home		= Persönlicher Ordner
@@ -38,8 +36,8 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-05-14 14:42+0200\n"
-"PO-Revision-Date: 2005-07-04 17:11+0200\n"
-"Last-Translator: Hendrik Richter <hendi@gnome-de.org>\n"
+"PO-Revision-Date: 2005-08-19 17:11+0200\n"
+"Last-Translator: Jens Seidel <jseidel@cvs.gnome.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -68,7 +66,7 @@ msgstr "Blau gerippt"
 
 #: ../data/browser.xml.h:6
 msgid "Blue Rough"
-msgstr "Rauhes Blau"
+msgstr "Raues Blau"
 
 #: ../data/browser.xml.h:7
 msgid "Blue Type"
@@ -325,7 +323,7 @@ msgstr "Geripptes Papier"
 
 #: ../data/browser.xml.h:70
 msgid "Rough Paper"
-msgstr "Rauhes Papier"
+msgstr "Raues Papier"
 
 #: ../data/browser.xml.h:71
 msgid "Ruby"
@@ -826,7 +824,7 @@ msgid ""
 "files."
 msgstr ""
 "Falls dieser Schlüssel wahr ist, werden Sicherungsdateien angezeigt, wie z."
-"B. die von Emacs erstellten. Zur Zeit werden ausschließlich auf eine Tilde "
+"B. die von Emacs erstellten. Zurzeit werden ausschließlich auf eine Tilde "
 "(~) endende Dateien als Sicherungsdateien behandelt."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:46
@@ -6887,7 +6885,7 @@ msgstr "Ihre Netzwerk-Server im Dateimanager Nautilus anzeigen"
 #~ "Searching is unavailable right now, because you either have no index, or "
 #~ "the search service isn't running."
 #~ msgstr ""
-#~ "Die Suche ist zur Zeit nicht verfügbar, weil Sie entweder keinen Index "
+#~ "Die Suche ist zurzeit nicht verfügbar, weil Sie entweder keinen Index "
 #~ "haben oder der Suchdienst nicht läuft."
 
 #~ msgid ""
