--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-19  Rhys Jones  <rhys@sucs.org>
+
+	* cy.po: Updated Welsh translation.
+
 2005-08-19  Jens Seidel  <jseidel@cvs.gnome.org>
 
 	* de.po: Various typo fixes.
