--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-20  Roozbeh Pournader  <roozbeh@farsiweb.info>
+
+	* fa.po: Upldated Persian translation by Elnaz Sarbar
+	<elnaz@farsiweb.info> and myself.
+
 2005-08-19  Rhys Jones  <rhys@sucs.org>
 
 	* cy.po: Updated Welsh translation.
