Updated Ukrainian translation.
2005-08-20  Maxim Dziumanenko <mvd@mylinux.ua>

	* Updated Ukrainian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-20  Maxim Dziumanenko <mvd@mylinux.ua>
+
+	* uk.po: Updated Ukrainian translataion.
+
 2005-08-20  Roozbeh Pournader  <roozbeh@farsiweb.info>
 
 	* fa.po: Upldated Persian translation by Elnaz Sarbar
