Updated Korean translation.
2005-08-22  Changwoo Ryu  <cwryu@debian.org>

	* ko.po: Updated Korean translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-22  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation.
+
 2005-08-20  Maxim Dziumanenko <mvd@mylinux.ua>
 
 	* uk.po: Updated Ukrainian translataion.
