--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-22  Mugurel Tudor  <mugurelu@gnome.ro>
+
+	* ro.po: Updated Romanian translation
+
 2005-08-22  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
