--- a/po/ro.po
+++ b/po/ro.po
@@ -17,7 +17,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=( n == 1 ? 0 : ( ( (n%100 > 19) || ((n%100 == 0) && (n != 0))) ? 2 : 1 ) );\n"
+"Plural-Forms: nplurals=3;plural=(n==1?0:(((n%100>19)||((n%100==0)&&(n!=0)))?2:1))\n"
 "X-Generator: KBabel 1.9.1\n"
 
 #: ../data/browser.xml.h:1
