--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2005-08-22  Martin Wehner  <martin.wehner@gmail.com>
+
+	* libnautilus-private/nautilus-mime-actions.c:
+	(filter_nautilus_handler), (get_open_with_mime_applications),
+	(nautilus_mime_get_open_with_applications_for_file),
+	(nautilus_mime_get_applications_for_file),
+	(nautilus_mime_has_any_applications_for_file):
+	Don't show nautilus folder handler as application option
+	for folders. Fixes #310382.
+
+	Based on a patch from Christian Neumair  <chris@gnome-de.org>
+
 2005-08-17  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-main.c: (main):
