--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-08-23  Martin Wehner  <martin.wehner@gmail.com>
+
+	* libnautilus-private/nautilus-icon-factory.c:
+	(get_icon_from_cache):
+	Don't ref cached_icon twice. Fixes #307288.
+
+	Patch from Kjartan Maraas  <kmaraas@gnome.org>
+
 2005-08-22  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-file.c:
