--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+=== nautilus 2.11.92 ===
+
+2005-08-23  Martin Wehner  <martin.wehner@gmail.com>
+
+	* configure.in:
+	Require eel 2.11.92.
+
+	* NEWS: 
+	Update for release
+
 2005-08-23  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-tree-view-drag-dest.c:
