--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Major changes in 2.11.92 are:
+* Enable emblem dropping to the list view
+* Disallow deleting special locations from the location button popup
+* Don't show "Open Folder" as application option in context menus
+* Disallow custom icons for the trash
+* Cleanups & Leak fixed
+
 Major changes in 2.11.91 are:
 * Don't allow renaming of the desktop folder
 * Make moves within burn:// possible
