Fix layouting in text-beside-icons mode for short names. (#159621) Patch
2005-08-26  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c:
	(lay_down_icons_horizontal):
	Fix layouting in text-beside-icons mode for short names.
	(#159621)
	Patch from Christian Neumair  <chris@gnome-de.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-08-26  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-container.c:
+	(lay_down_icons_horizontal):
+	Fix layouting in text-beside-icons mode for short names.
+	(#159621)
+	Patch from Christian Neumair  <chris@gnome-de.org>
+
 2005-08-25  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-file-operations.[ch]:
