--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2005-08-26  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-directory-view.c:
+	Better handling of script env vars:
+	Expand uri for desktop directory.
+	Expand uris for links on desktop
+	Expand pathnames for items in trash.
+	Fixes bug #148545
+	Based on a patch from Christian Neumair  <chris@gnome-de.org>
+	
+2005-08-26  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-container.c:
 	(lay_down_icons_horizontal):
 	Fix layouting in text-beside-icons mode for short names.
