vi.po: Updated Vietnamese translation.

--- a/po/vi.po
+++ b/po/vi.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Nautilus GNOME 2.12\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-04 06:46+0000\n"
-"PO-Revision-Date: 2005-08-04 21:44+0930\n"
+"PO-Revision-Date: 2005-08-27 17:25+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <gnomevi-list@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -390,9 +390,7 @@ msgid ""
 "\", \"owner\", \"group\", \"permissions\", \"octal_permissions\" and "
 "\"mime_type\"."
 msgstr ""
-"Danh sách phụ đề dưới biểu tượng trong Khung xem Biểu tượng và trên màn hình "
-"nền. Số phụ đề thực sự được hiển thị tùy thuộc vào hệ số thu phóng. Giá trị "
-"có thể là:\n"
+"Danh sách phụ đề dưới biểu tượng trong Khung xem Biểu tượng và trên mặt bàn. Số phụ đề thực sự được hiển thị tùy thuộc vào hệ số thu phóng. Giá trị có thể là:\n"
 " • size — kích thước\n"
 " • type — kiểu\n"
 " • date_modified — ngày sửa đổi\n"
@@ -410,7 +408,7 @@ msgstr "Luôn dùng trường nhập địa điểm, thay vào thanh đường d
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:3
 msgid "Computer icon visible on desktop"
-msgstr "Biểu tượng Máy tính hiện trên màn hình nền"
+msgstr "Biểu tượng Máy tính hiện trên mặt bàn"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:4
 msgid "Criteria for search bar searching"
@@ -554,7 +552,7 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:33
 msgid "Home icon visible on desktop"
-msgstr "Biểu tượng danh mục cá nhân hiện trên màn hình nền"
+msgstr "Biểu tượng danh mục cá nhân hiện trên mặt bàn"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:34
 msgid ""
@@ -614,7 +612,7 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:43
 msgid "If set to true, then Nautilus will draw the icons on the desktop."
-msgstr "Nếu đặt là đúng thì Nautilus sẽ vẽ các biểu tượng trên màn hình nền."
+msgstr "Nếu đặt là đúng thì Nautilus sẽ vẽ các biểu tượng trên mặt bàn."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:44
 msgid ""
@@ -631,8 +629,8 @@ msgid ""
 "If set to true, then Nautilus will use the user's home folder as the "
 "desktop. If it is false, then it will use ~/Desktop as the desktop."
 msgstr ""
-"Nếu đúng, Nautilus sẽ dùng danh mục cá nhân của người dùng làm màn hình nền. "
-"Ngược lại dùng danh mục «~/Desktop» làm màn hình nền."
+"Nếu đúng, Nautilus sẽ dùng danh mục cá nhân của người dùng làm mặt bàn. "
+"Ngược lại dùng danh mục <~/Desktop> làm mặt bàn."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:46
 msgid ""
@@ -668,7 +666,7 @@ msgid ""
 "on the desktop."
 msgstr ""
 "Nếu đặt là true thì biểu tượng liên kết với vị trí máy tính sẽ được đặt lên "
-"màn hình nền."
+"mặt bàn."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:50
 msgid ""
@@ -676,23 +674,21 @@ msgid ""
 "the desktop."
 msgstr ""
 "Nếu đặt là true, một biểu tượng liên kết với thư mục cá nhân sẽ được đặt "
-"trên màn hình nền."
+"trên mặt bàn."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:51
 msgid ""
 "If this is set to true, an icon linking to the trash will be put on the "
 "desktop."
 msgstr ""
-"Nếu đặt là true thì biểu tượng liên kết với Sọt Rác sẽ được đặt lên màn hình "
-"nền."
+"Nếu đặt là true thì biểu tượng liên kết với Sọt Rác sẽ được đặt lên mặt bàn."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:52
 msgid ""
 "If this is set to true, icons linking to mounted volumes will be put on the "
 "desktop."
 msgstr ""
-"Nếu đặt là true thì biểu tượng liên kết với đĩa đã gắn sẽ được đặt lên màn "
-"hình nền."
+"Nếu đặt là true thì biểu tượng liên kết với đĩa đã gắn sẽ được đặt lên mặt bàn."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:53
 msgid ""
@@ -759,11 +755,11 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:63
 msgid "Nautilus handles drawing the desktop"
-msgstr "Nautilus xử lý việc vẽ màn hình nền"
+msgstr "Nautilus xử lý việc vẽ mặt bàn"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:64
 msgid "Nautilus uses the users home folder as the desktop"
-msgstr "Dùng thư mục cá nhân của bạn làm màn hình nền"
+msgstr "Dùng thư mục cá nhân của bạn làm mặt bàn"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:65
 msgid "Only show folders in the tree sidebar"
@@ -803,7 +799,7 @@ msgstr "Hiện Ô Địa điểm trong cửa sổ mới"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:75
 msgid "Show mounted volumes on the desktop"
-msgstr "Hiện các đĩa đã gắn kết trên màn hình nền"
+msgstr "Hiện các đĩa đã gắn kết trên mặt bàn"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:76
 msgid "Show side pane in new windows"
@@ -903,7 +899,7 @@ msgstr "Độ rộng mặc định của Khung lề trong cửa sổ mới."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:87
 msgid "The font description used for the icons on the desktop."
-msgstr "Mô tả phông chữ dùng cho các biểu tượng trên màn hình nền."
+msgstr "Mô tả phông chữ dùng cho các biểu tượng trên mặt bàn."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:88
 msgid ""
@@ -922,8 +918,7 @@ msgid ""
 "This name can be set if you want a custom name for the computer icon on the "
 "desktop."
 msgstr ""
-"Có thể đặt tên nếu bạn muốn tự chọn tên cho biểu tượng máy tính trên màn "
-"hình nền."
+"Có thể đặt tên nếu bạn muốn tự chọn tên cho biểu tượng máy tính trên mặt bàn."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:91
 msgid ""
@@ -931,19 +926,18 @@ msgid ""
 "desktop."
 msgstr ""
 "Có thể đặt tên nếu bạn muốn tự chọn tên cho biểu tượng liên kết đến thư mục "
-"cá nhân trên màn hình nền."
+"cá nhân trên mặt bàn."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:92
 msgid ""
 "This name can be set if you want a custom name for the trash icon on the "
 "desktop."
 msgstr ""
-"Có thể đặt tên nếu bạn muốn tự chọn tên cho biểu tượng Sọt rác trên màn hình "
-"nền."
+"Có thể đặt tên nếu bạn muốn tự chọn tên cho biểu tượng Sọt rác trên mặt bàn."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:93
 msgid "Trash icon visible on desktop"
-msgstr "Hiện Sọt Rác trên màn hình nền"
+msgstr "Hiện Sọt Rác trên mặt bàn"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:94
 msgid "Type of click used to launch/open files"
@@ -1166,7 +1160,7 @@ msgstr "Đặt lại"
 #: ../libnautilus-private/nautilus-desktop-icon-file.c:163
 #: ../libnautilus-private/nautilus-trash-file.c:690
 msgid "on the desktop"
-msgstr "trên màn hình nền"
+msgstr "trên mặt bàn"
 
 #: ../libnautilus-private/nautilus-desktop-link-monitor.c:114
 #, c-format
@@ -1961,7 +1955,7 @@ msgstr "Sắc thái"
 
 #: ../libnautilus-private/nautilus-file-utilities.c:488
 msgid "CD/DVD Creator"
-msgstr "Trình tạo CD/DVD"
+msgstr "Bộ tạo CD/DVD"
 
 #: ../libnautilus-private/nautilus-file-utilities.c:490
 msgid "Windows Network"
@@ -2661,7 +2655,7 @@ msgstr "Duyệt hệ thống tập tin với trình quản lý tập tin"
 
 #: ../nautilus.desktop.in.h:2
 msgid "File Browser"
-msgstr "Trình duyệt tập tin"
+msgstr "Bộ duyệt tập tin"
 
 #: ../src/Nautilus_shell.server.in.h:1
 msgid "Factory for Nautilus shell and file manager"
@@ -2719,18 +2713,18 @@ msgstr "Tạo bộ khởi động mới"
 #. label, accelerator
 #: ../src/file-manager/fm-desktop-icon-view.c:699
 msgid "Change Desktop _Background"
-msgstr "Thay đổi ảnh _nền màn hình"
+msgstr "Thay đổi ảnh _nền mặt bàn"
 
 #. tooltip
 #: ../src/file-manager/fm-desktop-icon-view.c:701
 msgid ""
 "Show a window that lets you set your desktop background's pattern or color"
-msgstr "Trình diễn một cửa sổ cho phép bạn tạo mẫu hay màu của nền màn hình"
+msgstr "Trình diễn một cửa sổ cho phép bạn tạo mẫu hay màu của mặt bàn"
 
 #. label, accelerator
 #: ../src/file-manager/fm-desktop-icon-view.c:706
 msgid "Empty Trash"
-msgstr "Đổ rác"
+msgstr "Đổ Sọt rác"
 
 #. tooltip
 #. label, accelerator
@@ -2755,15 +2749,15 @@ msgstr "Xem kiểu _màn hình nền"
 
 #: ../src/file-manager/fm-desktop-icon-view.c:800
 msgid "The desktop view encountered an error."
-msgstr "Khung xem màn hình nền gặp lỗi."
+msgstr "Khung xem mặt bàn nền gặp lỗi."
 
 #: ../src/file-manager/fm-desktop-icon-view.c:801
 msgid "The desktop view encountered an error while starting up."
-msgstr "Khung xem màn hình nền gặp lỗi trong khi khởi động."
+msgstr "Khung xem mặt bàn gặp lỗi trong khi khởi động."
 
 #: ../src/file-manager/fm-desktop-icon-view.c:802
 msgid "Display this location with the desktop view."
-msgstr "Hiển thị địa điểm này với khung xem màn hình nền."
+msgstr "Hiển thị địa điểm này với khung xem mặt bàn."
 
 #: ../src/file-manager/fm-directory-view.c:547
 #, c-format
@@ -4310,14 +4304,14 @@ msgstr "Liên kết tới màn hình nền cũ"
 #: ../src/nautilus-application.c:350
 msgid "A link called \"Link To Old Desktop\" has been created on the desktop."
 msgstr ""
-"Liên kết tên «Liên kết tới màn hình nền cũ» đã được tạo trên màn hình nền."
+"Liên kết tên «Liên kết tới màn hình nền cũ» đã được tạo trên mặt bàn."
 
 #: ../src/nautilus-application.c:351
 msgid ""
 "The location of the desktop directory has changed in GNOME 2.4. You can open "
 "the link and move over the files you want, then delete the link."
 msgstr ""
-"Vị trí của danh mục của màn hình nền đã thay đổi trong GNOME phiên bản 2.4. "
+"Vị trí của danh mục của mặt bàn đã thay đổi trong GNOME phiên bản 2.4. "
 "Bạn có thể mở liên kết này để di chuyển nhưng tập tin qua màn hình nền mới, "
 "sau đó xóa bỏ liên kết đi."
 
@@ -5104,7 +5098,7 @@ msgid ""
 "Do not manage the desktop (ignore the preference set in the preferences "
 "dialog)."
 msgstr ""
-"Không được quản trị màn hình nền (bỏ qua phần chỉnh lý trong hội thoại tùy "
+"Không được quản trị mặt bàn (bỏ qua phần tùy thích trong hội thoại tùy "
 "thích)."
 
 #: ../src/nautilus-main.c:277
@@ -5121,7 +5115,7 @@ msgstr "Khởi động lại Nautilus."
 
 #: ../src/nautilus-main.c:325
 msgid "File Manager"
-msgstr "Trình Quản lý Tập tin"
+msgstr "Bộ Quản lý Tập tin"
 
 # Name: don't translate / Tên: đừng dịch
 #. Set initial window title
@@ -5325,7 +5319,7 @@ msgstr "Lịch sử sau"
 #: ../src/nautilus-navigation-window.c:793
 #, c-format
 msgid "%s - File Browser"
-msgstr "%s — Trình duyệt tập tin"
+msgstr "%s — Bộ duyệt tập tin"
 
 #: ../src/nautilus-notes-viewer.c:388 ../src/nautilus-notes-viewer.c:498
 msgid "Notes"
@@ -5895,12 +5889,12 @@ msgstr "Đi tới thư mục sọt rác"
 #. name, stock id
 #: ../src/nautilus-window-menus.c:681
 msgid "CD/_DVD Creator"
-msgstr "Trình tạo đĩa CD/_DVD"
+msgstr "Bộ tạo đĩa CD/_DVD"
 
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:682
 msgid "Go to the CD/DVD Creator"
-msgstr "Đến Trình tạo đĩa CD/DVD"
+msgstr "Đến Bộ tạo đĩa CD/DVD"
 
 #: ../src/nautilus-window-menus.c:708
 msgid "_Up"
