--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-28  Mohammad DAMT  <mdamt@gnome.org>
+
+	* id.po: Updated Indonesian translation.
+	
 2005-08-28  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
