--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-08-25  William Jon McCann  <mccann@jhu.edu>
+
+	* src/file-manager/fm-icon-view.c (should_preview_sound):
+	Don't allow audio preview in burn://.  Workaround for
+	#312275.
+
 2005-08-29  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-icon-factory.c:
