--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-30  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation by Young-Ho Cha.
+
 2005-08-28  Mohammad DAMT  <mdamt@gnome.org>
 
 	* id.po: Updated Indonesian translation.
