--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-30  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian translation by
+	Vladimir Petkov <vpetkov@i-space.org>
+
 2005-08-30  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation by Young-Ho Cha.
@@ -17,7 +22,7 @@
 
 2005-08-27  Clytie Siddall <clytie@riverland.net.au>
 
-        * vi.po: Updated Vietnamese translation.
+	* vi.po: Updated Vietnamese translation.
 
 2005-08-27  Evandro Fernandes Giovanini <evandrofg@ig.com.br>
 
