Updated Macedonian Translation, Arangel Angov <arangela@cvs.gnome.org>

--- a/po/mk.po
+++ b/po/mk.po
@@ -35,7 +35,7 @@ msgstr ""
 "Project-Id-Version: mk\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-15 14:49+0000\n"
-"PO-Revision-Date: 2005-08-15 23:18+0200\n"
+"PO-Revision-Date: 2005-08-31 14:46+0200\n"
 "Last-Translator: Арангел Ангов <ufo@linux.net.mk>\n"
 "Language-Team: Macedonian <ossm-members@hedona.on.net.mk>\n"
 "MIME-Version: 1.0\n"
@@ -1279,7 +1279,7 @@ msgstr "Веќе постои амблем со име \"%s\"."
 
 #: ../libnautilus-private/nautilus-emblem-utils.c:214
 msgid "Please choose a different emblem name."
-msgstr "Одберете друго име за амблемот."
+msgstr "Изберете друго име за амблемот."
 
 #: ../libnautilus-private/nautilus-emblem-utils.c:215
 msgid "Couldn't install emblem"
@@ -2471,7 +2471,7 @@ msgstr ""
 
 #: ../libnautilus-private/nautilus-program-choosing.c:142
 msgid "Open Failed, would you like to choose another action?"
-msgstr "Отворањето е неуспешно. Сакате да одберете друга акција?"
+msgstr "Отворањето е неуспешно. Сакате да изберете друга акција?"
 
 #: ../libnautilus-private/nautilus-program-choosing.c:143
 #, c-format
@@ -2842,7 +2842,7 @@ msgstr "Избриши?"
 
 #: ../src/file-manager/fm-directory-view.c:1022
 msgid "Select Pattern"
-msgstr "Одберете шара"
+msgstr "Изберете шара"
 
 #: ../src/file-manager/fm-directory-view.c:1038
 msgid "_Pattern:"
@@ -3056,7 +3056,7 @@ msgstr ""
 "Не отворајте ја датотеката доколку друг ја креирал, или сте ја добиле од "
 "неповерлив извор. За да ја отворите датотеката, реименувајте ја датотеката "
 "со правилна екстензија за \"%s\", а потоа отворете ја стандардно. Инаку, "
-"употребете ја опцијата \"Отвори со\" и одберете соодветна апликација за "
+"употребете ја опцијата \"Отвори со\" и изберете соодветна апликација за "
 "датотеката."
 
 #: ../src/file-manager/fm-directory-view.c:4822
@@ -3334,7 +3334,7 @@ msgstr "Избери ги сите предмети во овој прозоре
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6172
 msgid "Select _Pattern"
-msgstr "Одберете _шара"
+msgstr "Изберете _шара"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6173
@@ -3411,7 +3411,7 @@ msgstr "Ресетирај го погледот на _стандардно"
 #: ../src/file-manager/fm-directory-view.c:6201
 msgid "Reset sorting order and zoom level to match preferences for this view"
 msgstr ""
-"Ресетирај го редоследот и нивото на зум така што ќе се вколпи во параметрите "
+"Ресетирај го редоследот и нивото на зум така што ќе се вколпи во преференците "
 "за овој поглед"
 
 #. name, stock id
@@ -3985,7 +3985,7 @@ msgstr "Видливи _колони..."
 #. label, accelerator
 #: ../src/file-manager/fm-list-view.c:2048
 msgid "Select the columns visible in this folder"
-msgstr "Одберете ги колоните видливи за оваа папка"
+msgstr "Изберете ги колоните видливи за оваа папка"
 
 #: ../src/file-manager/fm-list-view.c:2730
 msgid "List"
@@ -4828,7 +4828,7 @@ msgstr "Прикажи"
 
 #: ../src/nautilus-file-management-properties.glade.h:52
 msgid "File Management Preferences"
-msgstr "Параметри за работа со датотеки"
+msgstr "Преференци за работа со датотеки"
 
 #: ../src/nautilus-file-management-properties.glade.h:53
 msgid "I_nclude a Delete command that bypasses Trash"
@@ -5121,7 +5121,7 @@ msgstr "_Запиши ја содржина на CD"
 
 #: ../src/nautilus-location-bar.c:61
 msgid "Go To:"
-msgstr "Оди До:"
+msgstr "Оди до:"
 
 #: ../src/nautilus-location-bar.c:154
 #, c-format
@@ -5164,8 +5164,8 @@ msgid ""
 "Do not manage the desktop (ignore the preference set in the preferences "
 "dialog)."
 msgstr ""
-"Не ја средувај работната околина (игнорирај ги параметрите во дијалогот на "
-"параметри)."
+"Не ја средувај работната околина (игнорирај ги преференците во дијалогот на "
+"преференци)."
 
 #: ../src/nautilus-main.c:278
 msgid "open a browser window."
@@ -5714,7 +5714,7 @@ msgstr "Наутилус не може да прикаже \"%s\"."
 
 #: ../src/nautilus-window-manage-views.c:1444
 msgid "Please select another viewer and try again."
-msgstr "Одберете друг прегледувач и обидете се повторно."
+msgstr "Изберете друг прегледувач и обидете се повторно."
 
 #: ../src/nautilus-window-menus.c:177
 msgid "Go to the location specified by this bookmark"
@@ -5823,7 +5823,7 @@ msgstr "Пара_метри"
 
 #: ../src/nautilus-window-menus.c:609
 msgid "Edit Nautilus preferences"
-msgstr "Уреди Наутилус параметри"
+msgstr "Уреди преференци за Наутилус"
 
 #: ../src/nautilus-window-menus.c:611
 msgid "_Undo"
