--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-31  Hendrik Richter  <hendi@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2005-08-30  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
